--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Viuly</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link href="/css/style.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
@@ -13,39 +14,39 @@
 </head>
 <body>
 
-  <div class="container">
-    <header class="main">
-      <div class="main__menu">
-        <img class="main__menu-logo" src="">
-        <nav class="main__menu-nav">
-          <ul class="nav__menu-list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link" href="#">Watch</a>
+  <div class="landing-page">
+    <header class="header">
+      <div class="container">
+        <nav class="navbar">
+          <a class="navbar-brand" href="#">
+            <img src="img/logo.svg" width="100" height="68" alt="">
+          </a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Watch</a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#">Top channels</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Top channels</a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#">New video</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">New video</a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#">Categories</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Categories</a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#">Live</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Live</a>
+            </li>
+            <li class="nav-item">
+              <button class="nav-toggler" type="button"></button>
             </li>
           </ul>
-          <div class="nav__menu-search"></div>
         </nav>
-        <div class="main__menu-user">
-          <a class="main__menu-user-link" href="#">Join</a>
-        </div>
-        <div class="main__menu-lang">
-          <a class="main__menu-user-lang" href="#">Ru</a>
-        </div>
       </div>
     </header>
   </div>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 </body>
 </html>
