--- a/source/index.html
+++ b/source/index.html
@@ -11,36 +11,60 @@
   <link rel="preload" href="/js/script.min.css" as="script">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800i|Pacifico" rel="stylesheet">
 </head>
 <body>
 
   <div class="landing-page">
     <header class="header">
       <div class="container">
-        <nav class="navbar">
+        <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#">
             <img src="img/logo.svg" width="100" height="68" alt="">
           </a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Watch</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Top channels</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">New video</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Categories</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Live</a>
-            </li>
-            <li class="nav-item">
-              <button class="nav-toggler" type="button"></button>
-            </li>
-          </ul>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Watch</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Top channels</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">New video</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Categories
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Music</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-live" href="#">Live</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-search" href="#">
+                  <i class="fa fa-search"></i>
+                </a>
+              </li>
+              <li class="nav-item">
+            </ul>
+            <ul class="navbar-nav mr-right">
+              <li class="nav-item active">
+                <a class="nav-link link-user" href="#">Join</a>
+              </li>
+              <div class="select-language dropdown d-inline-block">
+                <button class="btn btn-link dropdown-toggle position-relative" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ru
+                </button>
+                  <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#"><span class="dropdown-text-item">English</span></a>
+                  </div>
+              </div>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
