Доделал меню и шапку сайта

--- a/source/index.html
+++ b/source/index.html
@@ -21,21 +21,21 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#">
-            <img src="img/logo.svg" width="100" height="68" alt="">
+            <img src="img/logo.svg" width="100" height="68" alt="Viuly">
           </a>
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Watch</a>
+                <a class="nav-link menu-link" href="#">Watch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Top channels</a>
+                <a class="nav-link menu-link" href="#">Top channels</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">New video</a>
+                <a class="nav-link menu-link" href="#">New video</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-link dropdown-toggle menu-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Categories
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -53,12 +53,11 @@
               <li class="nav-item">
             </ul>
             <ul class="navbar-nav mr-right">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link link-user" href="#">Join</a>
               </li>
               <div class="select-language dropdown d-inline-block">
-                <button class="btn btn-link dropdown-toggle position-relative" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ru
-                </button>
+                <button class="btn btn-link btn-lang dropdown-toggle position-relative" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ru</button>
                   <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#"><span class="dropdown-text-item">English</span></a>
                   </div>
@@ -66,6 +65,36 @@
             </ul>
           </div>
         </nav>
+      </div>
+      <div class="container">
+        <div class="row col-8 justify-content-center header__title">
+          <h1>Fair video sharing, decentralised and secured</h1>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="header__buttons offset-md-4 mr-auto">
+            <button class="header__btn">Watch</button>
+            <button class="header__btn header__btn-active">Join</button>
+          </div>
+          <div class="header__social col-2">
+            <a class="social__link" href="#">
+              <img src="img/reddit.svg" width="25" height="21" alt="Reddit">
+            </a>
+            <a class="social__link" href="#">
+              <img src="img/telegram.svg" width="22" height="20" alt="Telegram">
+            </a>
+            <a class="social__link" href="#">
+              <img src="img/facebook.svg" width="11" height="22" alt="Facebook">
+            </a>
+            <a class="social__link" href="#">
+             <img src="img/twitter.svg" width="22" height="18" alt="Twitter">
+            </a>
+            <a class="social__link" href="#">
+              <img src="img/medium.svg" width="19" height="15" alt="Medium">
+            </a>
+          </div>
+        </div>
       </div>
     </header>
   </div>
