--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
 
   <div class="landing-page">
     <header class="header">
-      <div class="container">
+      <div class="container header__nav">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#">
             <img src="img/logo.svg" width="100" height="68" alt="Viuly">
@@ -67,7 +67,7 @@
         </nav>
       </div>
       <div class="container">
-        <div class="row col-8 justify-content-center header__title">
+        <div class="row col-7 justify-content-center header__title">
           <h1>Fair video sharing, decentralised and secured</h1>
         </div>
       </div>
@@ -88,7 +88,7 @@
               <img src="img/facebook.svg" width="11" height="22" alt="Facebook">
             </a>
             <a class="social__link" href="#">
-             <img src="img/twitter.svg" width="22" height="18" alt="Twitter">
+              <img src="img/twitter.svg" width="22" height="18" alt="Twitter">
             </a>
             <a class="social__link" href="#">
               <img src="img/medium.svg" width="19" height="15" alt="Medium">
@@ -97,6 +97,99 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <div class="container">
+        <div class="row col-6 m-auto">
+          <h2 class="main__title justify-content-center">First decentralized videosharing platform based on VIU |Etherium| tokens</h2>
+        </div>
+      </div>
+      <div class="container main__reason">
+        <div class="row">
+          <h3 class="main__reason-title">Reasons to choose Viuly agains videosharing platform</h3>
+        </div>
+        <div class="row main__stats text-center">
+          <div class="col">
+            <p class="main__stats-title">816K</p>
+            <p class="main__stats-text">Amount of<br> users</p>
+          </div>
+          <div class="col">
+            <p class="main__stats-title">500 M</p>
+            <p class="main__stats-text">Amount of<br> videos</p>
+          </div>
+          <div class="col">
+            <p class="main__stats-title">1.567 M</p>
+            <p class="main__stats-text">Amount of money<br> spent in VIU</p>
+            <p class="main__stats-text-small">its equivalent in dollars</p>
+          </div>
+          <div class="w-100"></div>
+          <div class="col">
+            <p class="main__stats-title">5.894 M</p>
+            <p class="main__stats-text">Amount of tokens distributed</p>
+          </div>
+          <div class="col">
+            <p class="main__stats-title">134 K</p>
+            <p class="main__stats-text">Daily amount of views</p>
+          </div>
+          <div class="col">
+            <p class="main__stats-title">76.567 B</p>
+            <p class="main__stats-text">Hours watched<br> of video</p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <h3 class="video__title">Select Videos</h3>
+        </div>
+        <div class="row video__list">
+          <div class="col">
+            <img src="img/award-winners.png" width="299" height="208" alt="Award winners">
+          </div>
+          <div class="col video__item">
+            <img class="video__item" src="img/video-thumb-copy-2.jpg" width="350" height="200" alt="boat">
+            <img class="video__items-logo" src="img/combined-shape.svg" alt="">
+            <p class="video__items-time align-items-center">00:31:57</p>
+          </div>
+          <div class="col video__item">
+            <img src="img/video-thumb-copy-2.jpg" width="350" height="200" alt="baby">
+            <img class="video__items-logo" src="img/combined-shape.svg" alt="">
+            <p class="video__items-time">00:31:57</p>
+          </div>
+          <div class="w-100"></div>
+          <div class="col video__item pt-5">
+            <img src="img/video-thumb-copy-6.jpg" width="350" height="200" alt="flowers">
+            <img class="video__items-logo" src="img/combined-shape.svg" alt="">
+            <p class="video__items-time">00:31:57</p>
+          </div>
+          <div class="col video__item pt-5">
+            <img src="img/video-thumb-copy-4.jpg" width="350" height="200" alt="girl1">
+            <img class="video__items-logo" src="img/combined-shape.svg" alt="">
+            <p class="video__items-time">00:31:57</p>
+          </div>
+          <div class="col video__item pt-5">
+            <img src="img/video-thumb-copy-5.jpg" width="350" height="200" alt="ice-cream">
+            <img class="video__items-logo" src="img/combined-shape.svg" alt="">
+            <p class="video__items-time">00:31:57</p>
+          </div>
+          <div class="w-100"></div>
+          <div class="col video__item pt-5">
+            <img src="img/video-thumb-copy-7.jpg" width="350" height="200" alt="fashion">
+            <img class="video__items-logo" src="img/combined-shape.svg" alt="">
+            <p class="video__items-time">00:31:57</p>
+          </div>
+          <div class="col video__item pt-5">
+            <img src="img/video-thumb-copy-8.jpg" width="350" height="200" alt="food">
+            <img class="video__items-logo" src="img/combined-shape.svg" alt="">
+            <p class="video__items-time align-items-center">00:31:57</p>
+          </div>
+          <div class="col video__item pt-5">
+            <img src="img/video-thumb-copy-4.jpg" width="350" height="200" alt="girl2">
+            <img class="video__items-logo" src="img/combined-shape.svg" alt="">
+            <p class="video__items-time">00:31:57</p>
+          </div>
+        </div>
+      </div>
+      <div class="container service__container"></div>
+    </main>
   </div>
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
